--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
     <title>PacMan</title>
     <link rel="stylesheet" type="text/css" href="style.css">
-    <script type="text/javascript" src="app.js"></script>	
+    <script src="app.js"></script>	
 </head>
 <body>
-	<div id='world'></div>
+   <h1>Unexciting Pac-Man</h1>
+    <div id='world'></div>
 </body>
 </html>
