--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <script src="app.js"></script>	
 </head>
 <body>
-   <h1 class="yellow">Unexciting Pac-Man</h1>
+   <h1 class="yellow black-border">Unexciting Pac-Man</h1>
     <div id='world'></div>
 </body>
 </html>
