added player instructions

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
    <h1 class="yellow">Unexciting Pac-Man</h1>
+   <h3 class="yello">Use the arrow keys to move Pac-Man around</h3>
     <div id='world'></div>
 </body>
 </html>
